--- a/3tiers/package.json
+++ b/3tiers/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "mysql": "^2.18.1",
-    "pug": "^3.0.2"
+    "mysql2": "^2.2.5",
+    "pug": "^3.0.2",
+    "sequelize": "^6.6.2",
+    "sequelize-cli": "^6.2.0"
   }
 }
